init commit of basic Order and OrderBook class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Order_Matching_Engine)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Order_Matching_Engine main.cpp)
+add_executable(Order_Matching_Engine main.cpp Order.cpp OrderBook.cpp)
